--- a/.github/workflows/importToCrowdin.yml
+++ b/.github/workflows/importToCrowdin.yml
@@ -66,7 +66,7 @@ jobs:
       - name: Move doc to add-on repo folder
         run: |
           if [ -d "addon/addon/doc" ]; then
-          mv "$dir" "${{ github.event.inputs.repo }}"
+          mv "addon/addon/doc" "${{ github.event.inputs.repo }}"
                     else
           echo "Warning: Folder addon/addon/doc does not exist. Creating folder."
           mkdir -p ${{ github.event.inputs.repo }}/doc
