--- a/.github/workflows/importToCrowdin.yml
+++ b/.github/workflows/importToCrowdin.yml
@@ -109,6 +109,7 @@ jobs:
         with:
           upload_sources: true
           upload_translations: true
+          auto_approve_imported: true
           source: ${{ github.event.inputs.repo }}/nvda.pot
           translation: ${{ github.event.inputs.repo }}/locale/%two_letters_code%/LC_MESSAGES/nvda.po
         env:
@@ -121,6 +122,7 @@ jobs:
         with:
           upload_sources: true
           upload_translations: true
+          auto_approve_imported: true
           source: ${{ github.event.inputs.repo }}/nvda.pot
           translation: ${{ github.event.inputs.repo }}/locale/%locale_with_underscore%/LC_MESSAGES/nvda.po
         env:
