--- a/.github/workflows/importToCrowdin.yml
+++ b/.github/workflows/importToCrowdin.yml
@@ -97,8 +97,10 @@ jobs:
         run: |
           git config user.name github-actions
           git config user.email github-actions@github.com
-          git add ${{ github.event.inputs.repo }}/*.pot
-          git add ${{ github.event.inputs.repo }}/**/*.po
+          cd ${{ github.event.inputs.repo }}
+          git add '*.pot'
+          git add '*.po'
+
           git commit -m "Register ${{ github.event.inputs.repo }}"
           git branch -u origin/main
           git pull
