--- a/.github/workflows/importToCrowdin.yml
+++ b/.github/workflows/importToCrowdin.yml
@@ -97,10 +97,7 @@ jobs:
         run: |
           git config user.name github-actions
           git config user.email github-actions@github.com
-          cd ${{ github.event.inputs.repo }}
-          git add '*.pot'
-          git add '*.po'
-
+          git add ${{ github.event.inputs.repo }}
           git commit -m "Register ${{ github.event.inputs.repo }}"
           git branch -u origin/main
           git pull
