--- a/.github/workflows/importToCrowdin.yml
+++ b/.github/workflows/importToCrowdin.yml
@@ -5,7 +5,7 @@ on:
     inputs:
       repo:
         description: 'Repository name'
-        required: true
+        required: false
 
 jobs:
   importToCrowdin:
