--- a/.github/workflows/importToCrowdin.yml
+++ b/.github/workflows/importToCrowdin.yml
@@ -15,11 +15,6 @@ on:
 
 jobs:
   importToCrowdin:
-    strategy:
-      fail-fast: false
-      max-parallel: 1
-      matrix: ${{ repo }}
-
     runs-on: ubuntu-latest
     permissions:
       contents: write
@@ -41,57 +36,57 @@ jobs:
       - name: Checkout add-on
         uses: actions/checkout@v4
         with:
-          repository: nvdaaddons/${{ matrix.repo }}
-          path: addon-${{ matrix.repo }}
+          repository: nvdaaddons/${{ inputs.repo }}
+          path: addon-${{ inputs.repo }}
           ref: stable
       - name: Create dir for repo
         run: |
-          if [ -d "${{ matrix.repo }}" ]; then
+          if [ -d "${{ inputs.repo }}" ]; then
           echo "Warning: Folder already exists. It will be removed."
-          rm -rf "${{ matrix.repo }}"
+          rm -rf "${{ inputs.repo }}"
           fi
-          mkdir ${{ matrix.repo }}
+          mkdir ${{ inputs.repo }}
       - name: Create add-on
         run: |
-          cd addon-${{ matrix.repo }}
+          cd addon-${{ inputs.repo }}
           scons
       - name: Create pot file
         run: |
-          cd addon-${{ matrix.repo }}
+          cd addon-${{ inputs.repo }}
           scons pot
       - name: Move pot file
         run: |
-          mv addon-${{ matrix.repo }}/${{ matrix.repo }}.pot ${{ matrix.repo }} -f
-          cd ${{ matrix.repo }}
-          mv ${{ matrix.repo }}.pot nvda.pot
+          mv addon-${{ inputs.repo }}/${{ inputs.repo }}.pot ${{ inputs.repo }} -f
+          cd ${{ inputs.repo }}
+          mv ${{ inputs.repo }}.pot nvda.pot
       - name: Convert markdown to pot
-        run: md2po -P addon-${{ matrix.repo }}/readme.md ${{ matrix.repo }}
+        run: md2po -P addon-${{ inputs.repo }}/readme.md ${{ inputs.repo }}
       - name: Move locale to add-on repo folder
         run: |
-          if [ -d "addon-${{ matrix.repo }}/addon/locale" ]; then
-          mv addon-${{ matrix.repo }}/addon/locale ${{ matrix.repo }}
+          if [ -d "addon-${{ inputs.repo }}/addon/locale" ]; then
+          mv addon-${{ inputs.repo }}/addon/locale ${{ inputs.repo }}
                     else
           echo "Warning: Folder does not exist."
           fi
       - name: Move doc to add-on repo folder
         run: |
-          if [ -d "addon-${{ matrix.repo }}/addon/doc" ]; then
-          mv "addon-${{ matrix.repo }}/addon/doc" "${{ matrix.repo }}"
+          if [ -d "addon-${{ inputs.repo }}/addon/doc" ]; then
+          mv "addon-${{ inputs.repo }}/addon/doc" "${{ inputs.repo }}"
                     else
           echo "Warning: Folder does not exist. Creating folder."
-          mkdir -p ${{ matrix.repo }}/doc
+          mkdir -p ${{ inputs.repo }}/doc
           fi
       - name: Move translated doc
         run: |
-          cd ${{ matrix.repo }}/doc
+          cd ${{ inputs.repo }}/doc
           for dir in */; do
           dirBasename=$(basename "$dir")
           if [ "$dirBasename" = "en" ] || [ "$dirBasename" = "style.css" ]; then
           continue
           fi
-          if [ -f "${{ github.workspace }}/addons/${{ matrix.repo }}.$dirBasename.po" ]; then
-            mv "${{ github.workspace }}/addons/${{ matrix.repo }}.$dirBasename.po" "$dir" -f
-            mv "$dir/${{ matrix.repo }}.$dirBasename.po" "$dir/readme.po"
+          if [ -f "${{ github.workspace }}/addons/${{ inputs.repo }}.$dirBasename.po" ]; then
+            mv "${{ github.workspace }}/addons/${{ inputs.repo }}.$dirBasename.po" "$dir" -f
+            mv "$dir/${{ inputs.repo }}.$dirBasename.po" "$dir/readme.po"
           else
             echo "Warning: File does not exist."
           fi
@@ -99,16 +94,16 @@ jobs:
 
       #- name: Set configuration for add-on repo
         #run: |
-          #sed -i'.bak' 's/\(^.*: \"\)\(repo\/\)\(.*$\)/\1${{ matrix.repo }}\/\3/' crowdin.yml
-          #sed -i'.bak' 's/\(^.*\/\)\(repo.po\)\(.*$\)/\1${{ matrix.repo }}.po\3/' crowdin.yml
+          #sed -i'.bak' 's/\(^.*: \"\)\(repo\/\)\(.*$\)/\1${{ inputs.repo }}\/\3/' crowdin.yml
+          #sed -i'.bak' 's/\(^.*\/\)\(repo.po\)\(.*$\)/\1${{ inputs.repo }}.po\3/' crowdin.yml
 
 
       #- name: Commit and push
         #run: |
           #git config user.name github-actions
           #git config user.email github-actions@github.com
-          #git add ${{ matrix.repo }}
-          #git commit -m "Register ${{ matrix.repo }}"
+          #git add ${{ inputs.repo }}
+          #git commit -m "Register ${{ inputs.repo }}"
           #git branch -u origin/main
           #git pull
           #git push
@@ -121,8 +116,8 @@ jobs:
           upload_translations: true
           upload_translations_args: '--preserve-hierarchy'
           auto_approve_imported: true
-          source: ${{ matrix.repo }}/nvda.pot
-          translation: ${{ matrix.repo }}/locale/%two_letters_code%/LC_MESSAGES/nvda.po
+          source: ${{ inputs.repo }}/nvda.pot
+          translation: ${{ inputs.repo }}/locale/%two_letters_code%/LC_MESSAGES/nvda.po
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           CROWDIN_PROJECT_ID: ${{ vars.CROWDIN_ID }}
@@ -136,8 +131,8 @@ jobs:
           upload_translations: true
           upload_translations_args: '--preserve-hierarchy'
           auto_approve_imported: true
-          source: ${{ matrix.repo }}/nvda.pot
-          translation: ${{ matrix.repo }}/locale/%locale_with_underscore%/LC_MESSAGES/nvda.po
+          source: ${{ inputs.repo }}/nvda.pot
+          translation: ${{ inputs.repo }}/locale/%locale_with_underscore%/LC_MESSAGES/nvda.po
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           CROWDIN_PROJECT_ID: ${{ vars.CROWDIN_ID }}
@@ -151,8 +146,8 @@ jobs:
           upload_translations: true
           upload_translations_args: '--preserve-hierarchy'
           auto_approve_imported: true
-          source: ${{ matrix.repo }}/readme.pot
-          translation: ${{ matrix.repo }}/doc/%two_letters_code%/readme.po
+          source: ${{ inputs.repo }}/readme.pot
+          translation: ${{ inputs.repo }}/doc/%two_letters_code%/readme.po
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           CROWDIN_PROJECT_ID: ${{ vars.CROWDIN_ID }}
@@ -166,8 +161,8 @@ jobs:
           upload_translations: true
           upload_translations_args: '--preserve-hierarchy'
           auto_approve_imported: true
-          source: ${{ matrix.repo }}/readme.pot
-          translation: ${{ matrix.repo }}/doc/%locale_with_underscore%/readme.po
+          source: ${{ inputs.repo }}/readme.pot
+          translation: ${{ inputs.repo }}/doc/%locale_with_underscore%/readme.po
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           CROWDIN_PROJECT_ID: ${{ vars.CROWDIN_ID }}
