--- a/.github/workflows/importToCrowdin.yml
+++ b/.github/workflows/importToCrowdin.yml
@@ -92,6 +92,7 @@ jobs:
           done
       - name: Convert po to md
         run: |
+          mv addon-${{ inputs.repo }}/readme.md ${{ inputs.repo }}/doc
           cd ${{ inputs.repo }}/doc
           for dir in */; do
           po2md -i $dir/readme.po -t addon-${{ inputs.repo }}/readme.md $dir/readme.md
