Fix convert po to md

--- a/.github/workflows/importToCrowdin.yml
+++ b/.github/workflows/importToCrowdin.yml
@@ -92,10 +92,9 @@ jobs:
           done
       - name: Convert po to md
         run: |
-          mv addon-${{ inputs.repo }}/readme.md ${{ inputs.repo }}/doc
           cd ${{ inputs.repo }}/doc
-          for dir in */; do
-          po2md -i $dir/readme.po -t addon-${{ inputs.repo }}/readme.md $dir/readme.md
+          for dir in *; do
+          po2md -i $dir/readme.po -t en/readme.md $dir/readme.md
           done
       #- name: Set configuration for add-on repo
         #run: |
