--- a/.github/workflows/importToCrowdinNvaccess.yml
+++ b/.github/workflows/importToCrowdinNvaccess.yml
@@ -14,7 +14,7 @@ on:
         required: true
 jobs:
   importToCrowdin:
-    runs-on: ubuntuº-latest
+    runs-on: ubuntu-latest
     permissions:
       contents: write
 
