--- a/.github/workflows/importToCrowdinNvaccess.yml
+++ b/.github/workflows/importToCrowdinNvaccess.yml
@@ -37,6 +37,7 @@ jobs:
         with:
           repository: nvdaaddons/${{ inputs.repo }}
           path: addon-${{ inputs.repo }}
+          fetch-depth: 0
           ref: stable
       - name: Create dir for repo
         run: |
@@ -56,5 +57,6 @@ jobs:
       - name: Install uv
         uses: astral-sh/setup-uv@v6
       - name: Generate xliff
-        run: uv run utils/markdownTranslate.py generateXliff -m addon-${{ inputs.repo }}/readme.md -o ${{ inputs.repo }}/${{ inputs.repo }}.xliff
+          cd addon-${{ inputs.repo }}
+        run: uv run ../utils/markdownTranslate.py generateXliff -m readme.md -o ${{ ../inputs.repo }}/${{ inputs.repo }}.xliff
         
