--- a/.github/workflows/importToCrowdinNvaccess.yml
+++ b/.github/workflows/importToCrowdinNvaccess.yml
@@ -59,5 +59,5 @@ jobs:
       - name: Generate xliff
         run: |
           cd addon-${{ inputs.repo }}
-          uv run ../utils/markdownTranslate.py generateXliff -m readme.md -o ${{ ../inputs.repo }}/${{ inputs.repo }}.xliff
+          uv run ../utils/markdownTranslate.py generateXliff -m readme.md -o ${{ inputs.repo }}.xliff
         
