Add pot and xliff files

--- a/.github/workflows/importToCrowdinNvaccess.yml
+++ b/.github/workflows/importToCrowdinNvaccess.yml
@@ -58,4 +58,17 @@ jobs:
         run: |
           cd addon-${{ inputs.repo }}
           python ../utils/markdownTranslate.py generateXliff -m readme.md -o ${{ inputs.repo }}.xliff
-        
+      - name: Move files to repo
+        run: |
+          mv addon-${{ inputs.repo }}/${{ inputs.repo }}.pot ${{ inputs.repo }}
+          mv addon-${{ inputs.repo }}/${{ inputs.repo }}.xliff ${{ inputs.repo }}
+      - name: Commit and push
+        run: |
+          git config user.name github-actions
+          git config user.email github-actions@github.com
+          git add ${{ inputs.repo }}
+          git commit -m "Register ${{ inputs.repo }}"
+          git branch -u origin/main
+          git pull
+          git push
+          
